Fix style of text on phone too light

--- a/styles/helpers/base.sass
+++ b/styles/helpers/base.sass
@@ -52,7 +52,6 @@ h5
 p
 	font-size: 16px
 	line-height: 1.5
-	font-weight: lighter;
 	@media screen and (max-width: 800px)
 		font-size: 15px
 
